<resources>
    <string name="app_name">OctoDroid</string>
    <string name="introduction">To be able to use the app to its full potential, please log in to GitHub using the button below.\n\nAlternatively, you can explore some parts of GitHub using the swipe-out menu on the left.</string>
    <string name="repo_not_found_toast">Repository was not found</string>
    <string name="loading_msg">Loading\u2026</string>
    <string name="saving_msg">Saving\u2026</string>
    <string name="deleting_msg">Deleting\u2026</string>
    <string name="closing_msg">Closing\u2026</string>
    <string name="opening_msg">Opening\u2026</string>
    <string name="merging_msg">Merging\u2026</string>
    <string name="reviewing_msg">Adding Review\u2026</string>
    <string name="authenticating">Authenticating\u2026</string>
    <string name="search">Search</string>
    <string name="search_code">Search code</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_oauth">Login via OAuth</string>
    <string name="login_token">Login using access token</string>
    <string name="login_summary_oauth">Log in to Github using the OAuth web login flow.\nAs the login process is done in your browser and only one account can be active at a time there, you need to make sure to be logged out from Github in your browser before being able to log in to a new account.\n\nPlease visit <a href="https://github.com/logout">Github\'s logout page</a>, finish the logout process, then close the browser window, come back to the app and continue the login process.\nIf you\'re sure you\'re not logged in, you can also continue to the login process right away.</string>
    <string name="credentials_error_empty">This field must not be empty.</string>
    <string name="credentials_error_invalid_token">The entered text does not look like a valid access token.</string>
    <string name="credentials_token">Access token</string>
    <string name="pat_min_scope_hint">Tip: use a fine-grained personal access token with only the minimum required scopes.</string>
    <string name="try_again">Try again</string>
    <string name="report_issue">Report issue</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="retry">Retry</string>
    <string name="open_source_components">Open source components</string>
    <string name="my_profile">My profile</string>
    <string name="user_context">Account</string>
    <string name="add_account">Add account</string>
    <string name="my_email">zolayuren@gmail.com</string>
    <string name="my_web">https://github.com/3299074036/OctoDroid</string>
    <string name="my_username">3299074036</string>
    <string name="my_repo">OctoDroid</string>
    <string name="source_code">Source Code</string>
    <string name="feedback_text">If you have any issues or suggestions, please contact me.  Any kind of feedback is greatly appreciated.</string>
    <string name="feedback_by_email">By Email</string>
    <string name="feedback_by_gh4a">By OctoDroid</string>
    <string name="other_info">Other Information</string>
    <string name="view">View</string>
    <string name="readme">Readme</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="account_manage">Account management</string>
    <string name="account_manage_summary">Switch, add or remove signed-in accounts</string>
    <string name="current_account">Current account</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_confirm">Delete account %1$s? Its token will be removed from this device.</string>
    <string name="account_added">Account %1$s added</string>
    <string name="login_failed">Login failed</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_browsing">General</string>
    <string name="settings_category_account">Account &amp; notifications</string>
    <string name="settings_category_network">Network acceleration</string>
    <string name="settings_category_updates">Updates</string>
    <string name="settings_category_translation">Translation</string>
    <string name="settings_category_about">About</string>
    <string name="check_update">Check for updates</string>
    <string name="check_update_summary">Check if a newer version is available on GitHub</string>
    <string name="auto_check_update">Auto-check for updates</string>
    <string name="auto_check_update_summary">Automatically check for updates once a day on startup</string>
    <string name="update_available">Update available</string>
    <string name="update_available_message">New version %1$s is available (current: %2$s).\n\n%3$s</string>
    <string name="download_update">Download update</string>
    <string name="already_latest">You\'re on the latest version</string>
    <string name="checking_update">Checking for updates…</string>
    <string name="update_check_failed">Update check failed: %1$s</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="allow_install_unknown_apps">Please allow installing unknown apps, then retry</string>
    <string name="apk_signature_mismatch">Update package signature does not match the installed app, installation blocked</string>
    <string name="reply">Reply</string>
    <string name="reply_selected">Reply (Selected)</string>
    <string name="add_comment">Add comment</string>
    <string name="add_reaction">Add reaction</string>
    <string name="remove_reaction">Remove reaction</string>
    <string name="add_reaction_error">Adding reaction failed</string>
    <string name="remove_reaction_error">Removing reaction failed</string>
    <string name="edit">Edit</string>
    <string name="members">Members</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="merged">Merged</string>
    <string name="draft">Draft</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_green">Green</string>
    <string name="accent_blue">Blue</string>
    <string name="accent_red">Red</string>
    <string name="accent_orange">Orange</string>
    <string name="accent_purple">Purple</string>
    <string name="accent_teal">Teal</string>
    <string name="language">Language</string>
    <string name="language_system_default">System default</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_english">English</string>
    <string name="pub_timeline">Public Timeline</string>
    <string name="feed_hub">Feed</string>
    <string name="feed_tab_following">Following</string>
    <string name="feed_tab_public">Public</string>
    <string name="my_items">Issues &amp; PRs</string>
    <string name="issues_tab">Issues</string>
    <string name="prs_tab">Pull requests</string>
    <string name="issues_filter">Filter</string>
    <string name="star_hub">Star</string>
    <string name="discover_hub">Discover</string>
    <string name="trend_range">Time range</string>
    <string name="load_failure_explanation">Loading the data from GitHub failed. Please verify you have a working network connection and try again.</string>
    <string name="load_failure_explanation_dmca">This repository was taken down for legal reasons.\nPlease see %1$s for details.</string>
    <string name="load_failure_explanation_parsing">There was an error while parsing GitHub\'s response. You can use the button below to report this issue to the app developers.</string>
    <string name="load_failure_explanation_with_reason">Loading the data from GitHub failed. GitHub told us the following reason:\n%1$s</string>
    <string name="snackbar_network_error">%1$s. Please check your internet connection.</string>
    <string name="snackbar_application_error">%1$s. You can copy the error log to provide more details when reporting the issue to the app developers.</string>
    <string name="snackbar_github_api_error">%1$s: %2$s</string>
    <string name="snackbar_copy_error_msg_action">Copy error message</string>
    <string name="snackbar_copy_error_log_action">Copy error log</string>
    <string name="issue_reported">The issue has been reported. Thank you!</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="downloads">Downloads</string>
    <string name="releases">Releases</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="no_browser_found">The link could not be opened: no browser was found on your device</string>
    <string name="link_copied">Link copied</string>
    <string name="wrap_lines">Wrap lines</string>
    <string name="follow_renames">Follow renames</string>
    <string name="unknown">unknown</string>
    <string name="history">History</string>
    <string name="download">Download</string>
    <string name="deleted">(deleted)</string>
    <string name="go_to">Go to</string>
    <string name="forked_from">Forked from %1$s</string>
    <string name="menu_user">User %1$s</string>
    <string name="menu_repo">Repo %1$s</string>
    <string name="menu_compare">Compare %1$s</string>
    <string name="menu_commit">Commit %1$s</string>
    <string name="menu_issue">Issue %1$d</string>
    <string name="menu_gist">Gist %1$s</string>
    <string name="menu_file">File %1$s</string>
    <string name="menu_fork">Forked repo %1$s</string>
    <string name="menu_wiki">Wiki in browser</string>
    <string name="menu_pull">Pull request %1$d</string>
    <string name="menu_issues">Open issues</string>
    <string name="menu_pulls">Open pull requests</string>
    <string name="delete_comment_message">Delete this comment?</string>
    <string name="saving_comment">Saving comment\u2026</string>
    <string name="ellipse" translatable="false">\u2026</string>
    <string name="view_more">View more\u2026</string>
    <string name="view_video">View video</string>
    <string name="pulls">Pulls</string>
    <string name="issue_milestone_hint">Milestone</string>
    <string name="issue_assignee_hint">Assignees</string>
    <string name="link_not_openable">Link could not be opened</string>
    <string name="download_created">Created %1$s</string>
    <string name="download_failed">Download failed, please check your network connection or access rights</string>
    <string name="my_repositories">My repositories</string>
    <string name="my_gists">My gists</string>
    <string name="start_page">Start page</string>
    <string name="notifications">Notifications</string>
    <string name="menu_text_size">Code font size</string>
    <string name="menu_gif_load_mode">Animated GIF loading</string>
    <string name="notification_interval">Notification check interval</string>
    <string name="use_custom_tabs">Use built-in browser</string>
    <string name="open_links_inside_app">Open links inside the app</string>
    <string name="open_links_external_browser">Open links in an external browser</string>
    <string name="theme_toggle">Dark mode</string>
    <string name="customize_drawer">Customize sidebar</string>
    <string name="drawer_customize_summary">Reorder and show/hide sidebar items</string>
    <string name="translation_provider">Translation provider</string>
    <string name="translation_api_key">API key</string>
    <string name="translation_api_key_summary">API key required by the provider</string>
    <string name="translation_api_secret">API secret</string>
    <string name="translation_api_secret_summary">Youdao appSecret</string>
    <string name="translation_test">Test translation</string>
    <string name="translation_test_summary">Translate a short sample with the current provider settings</string>
</resources>