<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- 一级：我的 -->
    <group
        android:id="@+id/my_items"
        android:checkableBehavior="single">
        <item
            android:id="@+id/feed_hub"
            android:title="@string/feed_hub"
            android:icon="@drawable/icon_news_feed"
            android:checked="true" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/icon_notifications"
            android:title="@string/notifications"
            app:actionLayout="@layout/notifications_indicator" />
        <item
            android:id="@+id/discover_hub"
            android:title="@string/discover_hub"
            android:icon="@drawable/icon_trending"/>
        <item
            android:id="@+id/my_repos"
            android:title="@string/my_repositories"
            android:icon="@drawable/icon_repositories"/>
        <item
            android:id="@+id/star_hub"
            android:title="@string/star_hub"
            android:icon="@drawable/icon_star"/>
        <item
            android:id="@+id/issues_prs"
            android:title="@string/my_items"
            android:icon="@drawable/icon_issues"/>
        <item
            android:id="@+id/my_gists"
            android:title="@string/my_gists"
            android:icon="@drawable/icon_gists"/>
    </group>
    <!-- 一级：工具 -->
    <group
        android:id="@+id/navigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/icon_search"/>
    </group>
    <!-- 设置和深色模式开关（菜单形式） -->
    <group android:id="@+id/settings_group">
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings"/>
        <item
            android:id="@+id/theme_toggle"
            android:title="@string/theme_toggle"
            android:icon="@drawable/icon_theme"
            android:checkable="false"
            app:actionLayout="@layout/theme_toggle" />
    </group>
    <group android:id="@+id/account"
           android:checkableBehavior="none"
           android:visible="false">
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/profile" />
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout" />
    </group>
    <group android:id="@+id/other_accounts"
           android:checkableBehavior="none"
           android:visible="false">
        <item
            android:id="@+id/add_account"
            android:title="@string/add_account"
            android:icon="@drawable/icon_add"
            android:orderInCategory="9999" />
    </group>
</menu>
