<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="green"
        android:entries="@array/accent_color_items"
        android:entryValues="@array/accent_color_values"
        android:key="accent_color"
        android:summary="%s"
        android:title="@string/accent_color" />

    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:entries="@array/language_items"
        android:entryValues="@array/language_values"
        android:key="language"
        android:summary="%s"
        android:title="@string/language" />

    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="newsfeed"
        android:entries="@array/start_page_items"
        android:entryValues="@array/start_page_values"
        android:key="start_page"
        android:summary="%s"
        android:title="@string/start_page" />

    <com.gh4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="2"
        android:entries="@array/text_size_items"
        android:entryValues="@array/text_size_values"
        android:key="webview_initial_zoom"
        android:summary="%s"
        android:title="@string/menu_text_size" />

    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="1.0"
        android:entries="@array/font_scale_items"
        android:entryValues="@array/font_scale_values"
        android:key="font_scale"
        android:summary="%s"
        android:title="@string/font_size" />

    <com.gh4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="1"
        android:entries="@array/load_gif_mode_items"
        android:entryValues="@array/load_gif_mode_values"
        android:key="http_gif_load_mode"
        android:summary="%s"
        android:title="@string/menu_gif_load_mode" />

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="use_custom_tabs"
        android:summaryOn="@string/open_links_inside_app"
        android:summaryOff="@string/open_links_external_browser"
        android:title="@string/use_custom_tabs" />

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="notifications"
        android:title="@string/notifications" />

    <com.gh4a.widget.IntegerListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="15"
        android:dependency="notifications"
        android:entries="@array/notification_interval_items"
        android:entryValues="@array/notification_interval_values"
        android:key="notification_interval"
        android:summary="%s"
        android:title="@string/notification_interval" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="customize_drawer"
        android:title="@string/customize_drawer"
        android:summary="@string/drawer_customize_summary" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="about"
        android:title="@string/about" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="open_source_components"
        android:title="@string/open_source_components" />

</PreferenceScreen>
